--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
   <!--/ Intro Skew End /-->
-
+  <!--
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -104,15 +104,21 @@
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s text-center">Skill</p>
-                  <p class="s-description text-center">Effective Communication</p>
-                  <p class="s-description text-center">Leadership and Team Management</p>
-                  <p class="s-description text-center">Problem-Solving and Critical Thinking</p>
-                  <p class="s-description text-center">Strategic and Analytical Mindset</p>
-                  <p class="s-description text-center">Collaboration and Emotional Intelligence</p>
-                  <p class="s-description text-center">Adaptability and Flexibility</p>
-                  <p class="s-description text-center">Continuous Learning and Development</p>
-                  <p class="s-description text-center">Organizational Skills and Time Management</p>
+                  <div class="title-box-2">
+                    <h5 class="title-left">
+                      Soft Skills
+                    </h5>
+                  </div>
+                  <ul>
+                    <li><p class="lead">Effective Communication</p></li>
+                    <li><p class="lead">Leadership and Team Management</p></li>
+                    <li><p class="lead">Problem-Solving and Critical Thinking</p></li>
+                    <li><p class="lead">Strategic and Analytical Mindset</p></li>
+                    <li><p class="lead">Collaboration and Emotional Intelligence</p></li>
+                    <li><p class="lead">Adaptability and Flexibility</p></li>
+                    <li><p class="lead">Continuous Learning and Development</p></li>
+                    <li><p class="lead">Organizational Skills and Time Management</p></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-md-6">
@@ -133,8 +139,171 @@
       </div>
     </div>
   </section>
+  -->
+
+  <section id="about" class="about-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="box-shadow-full animate-box">
+            <div class="row">
+              <div class="col-sm-12 title-box-2">
+                <div class="row">
+                  <div class="col-sm-6 col-md-5">
+                    <div class="about-img">
+                      <img src="img/profile-picture.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-7">
+                    <div class="about-me pt-4 pt-md-0">
+                      <div class="title-box-2">
+                        <h5 class="title-left">
+                          About me
+                        </h5>
+                      </div>
+                      <p class="lead">
+                        Experienced Senior Software Engineer with a passion for learning and teaching cutting-edge technologies. Known for leading development initiatives, designing scalable software solutions, and advocating for best coding practices. Excels in a dynamic environment, continuously exploring new technologies and methodologies, and enthusiastically sharing knowledge with peers.
+                      </p>
+                      <p class="lead">
+                        Experienced Senior Software Engineer with a passion for learning and teaching cutting-edge technologies. Known for leading development initiatives, designing scalable software solutions, and advocating for best coding practices.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-12">
+                <div class="row">
+                  <div class="col-sm-12 col-md-4">
+                    <h4>Phone</h4>
+                    <p class="lead">
+                      (+34) 609529495
+                    </p>
+                  </div>
+                  <div class="col-sm-12 col-md-4">
+                    <h4>Email</h4>
+                    <p class="lead">
+                      dliertavilluendas@gmail.com
+                    </p>
+                  </div>
+                  <div class="col-sm-12 col-md-4">
+                    <h4>Address</h4>
+                    <p class="lead">
+                      Zaragoza, Spain, 50019
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--/ Section Soft Skills Star /-->
+  <section id="softskills" class="services-mf route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box text-center">
+            <h3 class="title-a">
+              Soft Skills
+            </h3>
+            <p class="subtitle-a">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+            <div class="line-mf"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Effective Communication</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Leadership and Team Management</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Problem-Solving and Critical Thinking</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Strategic and Analytical Mindset</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Collaboration and Emotional Intelligence</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Adaptability and Flexibility</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Continuous Learning and Development</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="service-box">
+            <div class="service-ico">
+              <span class="ico-circle"><i class="ion-monitor"></i></span>
+            </div>
+            <div class="service-content">
+              <h2 class="s-title">Organizational Skills and Time Management</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!--/ Section Soft Skills End /-->
 
   <!--/ Section Experience Star /-->
+  <!--
   <section id="experience" class="services-mf route">
     <div class="container">
       <div class="row">
@@ -157,7 +326,7 @@
               <span class="ico-circle"><i class="ion-monitor"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Design</h2>
+              <h2 class="m-title">Web Design</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -172,7 +341,7 @@
               <span class="ico-circle"><i class="ion-code-working"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Web Development</h2>
+              <h2 class="m-title">Web Development</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -187,7 +356,7 @@
               <span class="ico-circle"><i class="ion-camera"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Photography</h2>
+              <h2 class="m-title">Photography</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -202,7 +371,7 @@
               <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Responsive Design</h2>
+              <h2 class="m-title">Responsive Design</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -217,7 +386,7 @@
               <span class="ico-circle"><i class="ion-paintbrush"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Graphic Design</h2>
+              <h2 class="m-title">Graphic Design</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -232,7 +401,7 @@
               <span class="ico-circle"><i class="ion-stats-bars"></i></span>
             </div>
             <div class="service-content">
-              <h2 class="s-title">Marketing Services</h2>
+              <h2 class="m-title">Marketing Services</h2>
               <p class="s-description text-center">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
                 provident vitae! Magni
@@ -244,6 +413,7 @@
       </div>
     </div>
   </section>
+  -->
   <!--/ Section Services End /-->
 
   <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
@@ -691,7 +861,7 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href=""><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href=""><span class="ico-circle"><i class="fa fa-linkedin"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
                       <li><a href=""><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                     </ul>
