Added work experience and education sections + general improvements

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <a class="nav-link js-scroll" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#work">Education</a>
+            <a class="nav-link js-scroll" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll" href="#blog">Portfolio</a>
+            <a class="nav-link js-scroll" href="#work">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -65,7 +65,7 @@
   </nav>
   <!--/ Nav End /-->
 
-  <!--/ Intro Skew Star /-->
+  <!--/ Home Star /-->
   <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
@@ -79,68 +79,9 @@
       </div>
     </div>
   </div>
-  <!--/ Intro Skew End /-->
-  <!--
-  <section id="about" class="about-mf sect-pt4 route">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="box-shadow-full animate-box">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="row">
-                  <div class="col-sm-6 col-md-5">
-                    <div class="about-img">
-                      <img src="img/profile-picture.jpg" class="img-fluid rounded b-shadow-a" alt="">
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-7">
-                    <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>David Lierta</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Sernior Software Engineer</span></p>
-                      <p><span class="title-s">Email: </span> <span>dliertavilluendas@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(+34) 609529495</span></p>
-                    </div>
-                  </div>
-                </div>
-                <div class="skill-mf">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      Soft Skills
-                    </h5>
-                  </div>
-                  <ul>
-                    <li><p class="lead">Effective Communication</p></li>
-                    <li><p class="lead">Leadership and Team Management</p></li>
-                    <li><p class="lead">Problem-Solving and Critical Thinking</p></li>
-                    <li><p class="lead">Strategic and Analytical Mindset</p></li>
-                    <li><p class="lead">Collaboration and Emotional Intelligence</p></li>
-                    <li><p class="lead">Adaptability and Flexibility</p></li>
-                    <li><p class="lead">Continuous Learning and Development</p></li>
-                    <li><p class="lead">Organizational Skills and Time Management</p></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="about-me pt-4 pt-md-0">
-                  <div class="title-box-2">
-                    <h5 class="title-left">
-                      About me
-                    </h5>
-                  </div>
-                  <p class="lead">
-                    Experienced Senior Software Engineer with a passion for learning and teaching cutting-edge technologies. Known for leading development initiatives, designing scalable software solutions, and advocating for best coding practices. Excels in a dynamic environment, continuously exploring new technologies and methodologies, and enthusiastically sharing knowledge with peers.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  -->
+  <!--/ Home End /-->
 
+  <!--/ About Star /-->
   <section id="about" class="about-mf sect-pt4 route">
     <div class="container">
       <div class="row">
@@ -199,20 +140,22 @@
       </div>
     </div>
   </section>
+  <!--/ About End /-->
 
-  <!--/ Section Soft Skills Star /-->
-  <section id="softskills" class="services-mf route">
+  <!--/ Soft Skills /-->
+  <section id="softskills" class="paralax-mf services-mf sect-pt4 sect-mt4 route bg-image" style="background-image: url(img/overlay-bg.jpg)">
+    <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="title-box text-center">
-            <h3 class="title-a">
+          <div class="title-box-b text-center">
+            <h3 class="title-b">
               Soft Skills
             </h3>
-            <p class="subtitle-a">
+            <p class="subtitle-b">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
-            <div class="line-mf"></div>
+            <div class="line-mf-b"></div>
           </div>
         </div>
       </div>
@@ -300,123 +243,197 @@
       </div>
     </div>
   </section>
-  <!--/ Section Soft Skills End /-->
+  <!--/ Soft Skills End /-->
 
-  <!--/ Section Experience Star /-->
-  <!--
-  <section id="experience" class="services-mf route">
+  <!--/ Work Experience Star /-->
+  <section id="experience" class="services-mf sect-pt4 route">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="title-box text-center">
+          <div class="title-box-a text-center">
             <h3 class="title-a">
               Experience
             </h3>
             <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
-            <div class="line-mf"></div>
+            <div class="line-mf-a"></div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-monitor"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="m-title">Web Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
+				<div class="col-md-12 col-md-offset-0">
+					<ul class="timeline">
+						<li class="timeline-heading text-center animate-box">
+							<div><h3>Work Experience</h3></div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Senior Software Engineer</h3>
+									<h5 class="timeline-title">January 2023 – Present</h5>
+									<span class="company">Visma Labs Spain (RAET), Madrid, Spain (Full Remote)</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Senior Software Engineer</h3>
+									<h5 class="timeline-title">September 2022 – January 2023</h5>
+									<span class="company">Kabel / Avanade, Madrid, Spain (Full Remote)</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Software Engineer</h3>
+									<h5 class="timeline-title">July 2021 – September 2022</h5>
+									<span class="company">Visma Labs Spain (RAET), Madrid, Spain (Full Remote)</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								</div>
+							</div>
+						</li>
+            <li class="timeline-inverted animate-box">
+							<div class="timeline-badge"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Software Developer</h3>
+									<h5 class="timeline-title">September 2019 – July 2021</h5>
+									<span class="company">Hiberus Advanced Solutions SL, Zaragoza, Spain</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Junior Developer</h3>
+									<h5 class="timeline-title">September 2018 – September 2019</h5>
+									<span class="company">IDEA Consulting, Zaragoza, Spain</span>
+								</div>
+								<div class="timeline-body">
+									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								</div>
+							</div>
+						</li>
+			    	</ul>
+				</div>
+			</div>
+    </div>
+  </section>
+  <!--/ Work Services End /-->
+
+  <!--/ Education Star /-->
+  <section id="education" class="services-mf sect-pt4 route">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="title-box-a text-center">
+            <h3 class="title-a">
+              Education
+            </h3>
+            <p class="subtitle-a">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+            <div class="line-mf-a"></div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-code-working"></i></span>
+      </div>
+      <div class="row">
+        <div class="col-md-12 col-md-offset-0">
+          <ul class="timeline">
+            <li class="timeline-heading text-center animate-box">
+              <div><h3>Education</h3></div>
+            </li>
+            <li class="timeline-inverted animate-box">
+              <div class="timeline-badge"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3 class="timeline-title">Applications Development Higher Technical Certificate</h3>
+                  <h5 class="timeline-title">2017 - 2019</h5>
+                  <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+                </div>
+              </div>
+            </li>
+            <li class="animate-box timeline-unverted">
+              <div class="timeline-badge"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3 class="timeline-title">Animation 3D, Games and Interactive Environments Higher Technical Certificate</h3>
+                  <h5 class="timeline-title">2015 - 2017</h5>
+                  <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted animate-box">
+              <div class="timeline-badge"></div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h3 class="timeline-title">Bachelor of Science</h3>
+                  <h5 class="timeline-title">2013 - 2015</h5>
+                  <span class="company">IES Benjamín Jarnes, Fuentes de Ebro, Spain</span>
+                </div>
+              </div>
+            </li>
+
+          </br>
+          <li class="timeline-heading text-center animate-box">
+            <div><h3>Trainees</h3></div>
+          </li>
+          <li class="animate-box timeline-unverted">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">Applications Development Higher Technical Certificate</h3>
+                <h5 class="timeline-title">2017 - 2019</h5>
+                <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+              </div>
             </div>
-            <div class="service-content">
-              <h2 class="m-title">Web Development</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
+          </li>
+          <li class="timeline-inverted animate-box">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">Animation 3D, Games and Interactive Environments Higher Technical Certificate</h3>
+                <h5 class="timeline-title">2015 - 2017</h5>
+                <span class="company">CPIFP Los Enlaces, Zaragoza, Spain</span>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-camera"></i></span>
+          </li>
+          <li class="animate-box timeline-unverted">
+            <div class="timeline-badge"></div>
+            <div class="timeline-panel">
+              <div class="timeline-heading">
+                <h3 class="timeline-title">Bachelor of Science</h3>
+                <h5 class="timeline-title">2013 - 2015</h5>
+                <span class="company">IES Benjamín Jarnes, Fuentes de Ebro, Spain</span>
+              </div>
             </div>
-            <div class="service-content">
-              <h2 class="m-title">Photography</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-android-phone-portrait"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="m-title">Responsive Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-paintbrush"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="m-title">Graphic Design</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <div class="service-ico">
-              <span class="ico-circle"><i class="ion-stats-bars"></i></span>
-            </div>
-            <div class="service-content">
-              <h2 class="m-title">Marketing Services</h2>
-              <p class="s-description text-center">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                provident vitae! Magni
-                tempora perferendis eum non provident.
-              </p>
-            </div>
-          </div>
+          </li>
+          </ul>
         </div>
       </div>
     </div>
   </section>
-  -->
-  <!--/ Section Services End /-->
+  <!--/ Work Services End /-->
 
-  <div class="section-counter paralax-mf bg-image" style="background-image: url(img/counters-bg.jpg)">
+  <div class="section-counter sect-mt4 paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -473,14 +490,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="title-box text-center">
+          <div class="title-box-a text-center">
             <h3 class="title-a">
               Portfolio
             </h3>
             <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
-            <div class="line-mf"></div>
+            <div class="line-mf-a"></div>
           </div>
         </div>
       </div>
@@ -679,14 +696,14 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="title-box text-center">
+          <div class="title-box-a text-center">
             <h3 class="title-a">
               Blog
             </h3>
             <p class="subtitle-a">
               Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             </p>
-            <div class="line-mf"></div>
+            <div class="line-mf-a"></div>
           </div>
         </div>
       </div>
